# hardware-monitor

./: .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-build.sh  docker-compose.sample.yml
agent/: pyproject.toml  thresholds.sample.conf
agent/hardware_monitor_agent/: main.py
central_server/: alerter.py  main.py
central_server/static/: app.js  style.css
central_server/templates/: index.html
scripts/: install.sh
