[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-monitor-agent"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["psutil"]

[project.optional-dependencies]
nvidia = ["nvidia-ml-py3"]

[project.scripts]
hardware-monitor-agent = "hardware_monitor_agent.main:main"
